--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -1,6 +1,35 @@
 {% extends 'gifts/base.html' %}
+{% load static %}
 
 {% block content %}
-<h1>{{gift.receiver.get_full_name}}</h1>
-<h4>{{gift.receiver.profile.birth_date}}</h4>
+<div class="content container">
+    <h1>{{gift.receiver.get_full_name}}</h1>
+    <h4>{{gift.receiver.profile.birth_date}}</h4>
+
+
+    <div class="row">
+        <div class="col s12 offset-m2 m8 l7">
+            <p>Members</p>
+            <ul class="collection">
+                {% for member in members %}
+                <li class="collection-item avatar">
+                    <img src="{% static 'gifts/images/avatar_placeholder.png' %}" alt="" class="circle">
+                    <!-- <i class="material-icons circle">folder</i> -->
+                    <span class="title">{{member.first_name}} {{member.last_name}}</span>
+                    <p>First Line</p>
+                    {% if member.is_admin %}<i class="material-icons secondary-content yellow-text">verified</i>
+                    {% elif user_is_admin %}
+                    <a href="{% url 'group_grant_admin' group_id=group.id user_id=member.id %}">
+                        <i class="material-icons secondary-content green-text">add_circle</i>
+                    </a>
+                    {% else %}
+                    <i class="material-icons secondary-content teal-text">account_circle</i>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
