--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -1,10 +1,41 @@
 {% extends 'gifts/base.html' %}
 {% load static %}
+{% block head_links %}
+<link rel="stylesheet" type="text/css" href="{% static 'gifts/css/view_gift.css' %}">
+{% endblock %}
 
 {% block content %}
 <div class="content container">
-    <h1>{{gift.receiver.get_full_name}}</h1>
+    <h1>{{gift.receiver.first_name}}</h1>
     <h4>{{gift.receiver.profile.birth_date}}</h4>
+
+
+    {% if not gift.captain %}
+    <a href="{% url 'claim_captain' gift.id %}"><button class="btn">Become the Captain</button></a>
+    {% else %}
+    <!-- Captain's Detail -->
+    <div class="row">
+        <div class="col s12 m6">
+          <div class="card blue lighten-1">
+            <div class="card-content white-text">
+                <div class="row valign-wrapper">
+                    <div class="col s2">
+                      <img src="{% static 'gifts/images/avatar_placeholder.png' %}" alt="" class="circle responsive-img">
+                    </div>
+                    <div class="col s10">
+                      <span class="black-text captain-identifier">
+                        <span class="amber-text">Your Captain</span> {{gift.captain.first_name}}
+                      </span>
+                    </div>
+                </div>
+                <h6>Bank Details:</h6>
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Captain's Detail -->
+    {% endif %}
+                
 
 
     <div class="row">
