--- a/gifts/static/gifts/css/view_gift.css
+++ b/gifts/static/gifts/css/view_gift.css
@@ -2,3 +2,11 @@
     font-size: 25px;
     font-weight: bold;
 }
+
+.idea-item {
+    padding-left: 20px !important;
+}
+
+.idea-description {
+    font-size: 10px !important;
+}
