--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -50,13 +50,44 @@
 
     <!-- Gift Suggestions -->
     <div class="row">
-      <div class="col s12 m12 l7">
-        Gift Suggestions Go here
+      <div class="col s12 m12 l6">
+        <h5 class="center-align">Gift Suggestions</h5>
+
+        {% if gift_ideas|length > 0 %}
+        <ul class="collection purple darken-2">
+          {% for idea in gift_ideas %}
+          <li class="collection-item idea-item avatar purple lighten-2">
+            <span class="title">{{idea.title}}</span>
+            <p class="idea-description">{{idea.description}}</p>
+            <div class="secondary-content">
+              <a href="#"><i class="material-icons teal-text">thumb_up</i></a>
+              <span>{{idea.votes|length}}</span>
+            </div>
+          </li>
+          {% endfor %}
+        </ul>
+
+
+        {% else %}
+        <div class="row">
+          <div class="col s12">
+            <div class="card-panel purple lighten-2">
+              <span class="white-text">No one has suggested a gift just yet.
+                <br><br>
+                Once there are suggestions available, your group will be able to vote for their favourite gift.
+                <br><br>
+                Your group captain still has the final say!
+              </span>
+            </div>
+          </div>
+        </div>
+        {% endif %}
       </div>
       <!-- End Gift Suggestions -->
 
       <!-- Gift Suggestion Form -->
-      <div class="col s12 m12 l5">
+      <div class="col s12 m12 l6">
+        <h5>Make a Suggestion</h5>
         <form method="POST">
           {% csrf_token %}
           {% if messages %}
@@ -66,7 +97,6 @@
             {% endfor %}
           </ul>
           {% endif %}
-          <h5>Make a Suggestion</h5>
           <div class="input-field">
             {{ gift_idea_form.title }}
             {{ gift_idea_form.title.label_tag }}
@@ -97,7 +127,6 @@
           {% for member in members %}
           <li class="collection-item avatar">
             <img src="{% static 'gifts/images/avatar_placeholder.png' %}" alt="" class="circle">
-            <!-- <i class="material-icons circle">folder</i> -->
             <span class="title">{{member.first_name}} {{member.last_name}}</span>
             <p>First Line</p>
             {% if member.is_admin %}<i class="material-icons secondary-content yellow-text">verified</i>
