sort out suggestion textarea

--- a/gifts/static/gifts/css/view_gift.css
+++ b/gifts/static/gifts/css/view_gift.css
@@ -10,3 +10,11 @@
 .idea-description {
     font-size: 10px !important;
 }
+
+.suggestion-form {
+    padding: 1px 30px;
+}
+
+label {
+    color: white !important;
+}
