--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -60,8 +60,8 @@
             <span class="title">{{idea.title}}</span>
             <p class="idea-description">{{idea.description}}</p>
             <div class="secondary-content">
-              <a href="#"><i class="material-icons white-text">thumb_up</i></a>
-              <span class="white-text">{{idea.votes|length}}</span>
+              <i id="vote_button{{idea.id}}" {% if not idea.user_has_voted %} onclick="vote_for_gift_ajax('{{idea.id}}');"{% endif %} class="material-icons {% if not idea.user_has_voted %}white-text clickable{% else %} grey-text{% endif %}">thumb_up</i>
+              <span id="vote_counter{{idea.id}}"class="white-text">{{idea.votes.all.count}}</span>
             </div>
           </li>
           {% endfor %}
@@ -146,7 +146,10 @@
 
 </div>
 
+{% block end_scripts %}
+<script src="{% static 'gifts/js/viewGifts.js'%}"></script>
+{% endblock %}
 <script>
-  // $('body').css("background", "white")
+  $('body').css("background", "white")
 </script>
 {% endblock %}
