--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -54,6 +54,8 @@
     $(document).ready(function () {
         $('.modal').modal();
         $(".dropdown-trigger").dropdown();
+        $('.tooltipped').tooltip();
+
 
     });
 </script>
